--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,22 @@
     margin: 40px auto;
     padding: 20px;
 } 
+
+/* blog previews lists */
+.blog-preview
+{
+    padding: 10px 16px;
+    margin: 20px 0;
+    border-bottom: 1px solid #fafafa;
+   /*  line-height: 30px; */
+}
+.blog-preview:hover
+{
+    box-shadow: 1px 3px 5px;
+}
+.blog-preview h2
+{
+    font-size: 20px;
+    color: #f1356d;
+    margin-bottom: 8px;
+}
